@@ -6,6 +6,7 @@
 - Object tools export/import
 - DCI summary tables export/import
 - Template hierarchy preserved during export/import
+- NXSL functions and classes to work with alarms
 - MEGATEC protocol support in UPS subagent
 - Fixed broken WoL functionality
 - Fixed broken PING subagent
@@ -20,7 +21,7 @@
 	- Changed order of overview items to match Java console (node browser)
 	- Added MTU field in interface details (node browser)
 	- Updated support library
-- Fixed issues: #655, #657, #696, #701, #804, #812, #813
+- Fixed issues: #655, #657, #696, #701, #804, #811, #812, #813
 
 
 *
